--- a/css/style.css
+++ b/css/style.css
@@ -29,9 +29,6 @@ footer, header, hgroup, menu, nav, section {
     display: block;
 }
 
- {
-    line-height: 1;
-}
 ol, ul {
     list-style: none;
 }
@@ -461,4 +458,29 @@ div.tooltip {
     margin: 0 0 5px;
     color: #777;
 }
+
+.container-fluid {
+    display: flex; 
+    align-items: center; 
+    justify-content: space-between; 
+    margin: 0; 
+}
+
+#pieChart {
+    max-width: 400px; 
+    width: 100%;
+    height: auto; 
+    margin: 10px; 
+}
+
+.intro_text {
+    width: 50%; 
+    padding: 10px; 
+}
+
+.introduction {
+    font-size: 1rem; 
+    line-height: 1.5; 
+}
+
 
