--- a/css/style.css
+++ b/css/style.css
@@ -466,12 +466,14 @@ div.tooltip {
     margin: 0; 
 }
 
+
 #pieChart {
     max-width: 400px; 
     width: 100%;
-    height: auto; 
+    max-height: 400px; 
     margin: 10px; 
 }
+
 
 
 
